# AI-Video-Describer-ETL

./: README.md  app.py  pyproject.toml  requirements.txt
