[tool.poetry]
name = "video-describer"
version = "0.1.0"
description = ""
authors = ["R-midolli <rafaelmidolli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2024.10.7"
python-dotenv = "^1.0.1"
google-generativeai = "^0.8.3"
pytube = "^15.0.0"
opencv-python-headless = "^4.10.0.84"
notion-client = "^2.2.1"
requests = "^2.32.3"
google-api-python-client = "^2.149.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
